plugins {
    id 'java'
}

group = 'name.sitorhy.server'
version = '1.0-SNAPSHOT'
compileJava.options.encoding = 'UTF-8'
compileJava.sourceCompatibility = JavaVersion.VERSION_17
compileJava.targetCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
}

dependencies {
    implementation 'jakarta.servlet:jakarta.servlet-api:6.1.0'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.17.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
    implementation 'org.springframework:spring-web:6.1.12'
    implementation 'org.springframework:spring-webmvc:6.1.13'
    implementation 'org.springframework:spring-webflux:6.1.11'
    implementation 'org.eclipse.jetty:jetty-server:12.0.11'
    implementation 'org.eclipse.jetty.ee10:jetty-ee10-webapp:12.0.11'
    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
    implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
    implementation 'org.slf4j:slf4j-log4j12:2.0.13'
}

task fatJar(type: Jar) {
    manifest {
        attributes "Main-Class": "name.sitorhy.server.Main"
    }
    archiveBaseName = 'qq-music-server-lib';
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}